--- a/assets/scss/partials/components/_sidebar.scss
+++ b/assets/scss/partials/components/_sidebar.scss
@@ -44,7 +44,7 @@
 
     &-item {
       display: inline;
-      padding: 0 2px;
+      padding: 0 0.1em;
       line-height: 0;
       position: relative;
       top: 2px;
